@@ -6,6 +6,7 @@ plugins {
     id("org.springframework.boot") version "3.2.2"
     id("io.spring.dependency-management") version "1.1.4"
     id("org.jlleitschuh.gradle.ktlint") version "11.2.0"
+    id("application")
     kotlin("jvm") version "1.9.22"
     kotlin("plugin.spring") version "1.9.22"
 }
@@ -17,6 +18,12 @@ java {
     sourceCompatibility = JavaVersion.VERSION_21
 }
 
+application {
+    applicationDefaultJvmArgs += listOf(
+        "--add-opens=java.base/java.lang=ALL-UNNAMED"
+    )
+}
+
 repositories {
     mavenCentral()
 }
@@ -26,15 +33,22 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
+    implementation("io.github.microutils:kotlin-logging-jvm:2.0.11")
+
+    implementation("software.amazon.awssdk:secretsmanager:2.17.276")
+    implementation("software.amazon.awssdk:sts:2.17.276")
+    implementation("io.weaviate:client:4.5.1")
 
     implementation("com.aallam.openai:openai-client:3.6.3")
-    implementation("io.ktor:ktor-client-core:${ktor_version}")
-    implementation("io.ktor:ktor-client-cio:${ktor_version}")
+    implementation("io.ktor:ktor-client-core:$ktor_version")
+    implementation("io.ktor:ktor-client-cio:$ktor_version")
 
-    developmentOnly("org.springframework.boot:spring-boot-devtools")
     testImplementation("org.springframework.boot:spring-boot-starter-test")
 }
 
+ktlint {
+    disabledRules.set(setOf("no-wildcard-imports"))
+}
 
 tasks.withType<KotlinCompile> {
     kotlinOptions {
